@@ -1,3 +1,12 @@
+2002-04-25  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtk.override (_wrap_gtk_text_iter_get_char): remove wrapper,
+	as arg type covers this case fine.
+
+	* codegen/argtypes.py (GUniCharArg.write_return): add code for
+	handling gunichar returns.
+	(GUniCharArg.write_param): and support for gunichar parameters.
+
 2002-04-23  James Henstridge  <james@daa.com.au>
 
 	* gtk/gtk-types.c: remove old commented out GdkGC implementation.
